minor code cleaning

--- a/Amenities Page/amenities.html
+++ b/Amenities Page/amenities.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>  Diwata Resort Ameneties </title>
+    <title>  Diwata Resort Amenities </title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
     <div class="list">
         <ul>
             <li><a href="Homepage.html"><strong>Home</strong></a></li>
-            <li><a href="#"><strong>Ameneties</strong></a></li>
+            <li><a href="#"><strong>Amenities</strong></a></li>
             <li><a href="#"><strong>Add-ons</strong></a></li>
 
             <li><a href="#"><strong>Reservation</strong></a></li>
